<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:tooltipText="Home"
        android:enabled="true"
        android:title="@string/home"
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        >
    </item>
    <item
        android:tooltipText="Search"
        android:title="@string/search"
        android:id="@+id/nav_search"
        android:icon="@drawable/baseline_search_24"
        >
    </item>
    <item
        android:tooltipText="Library"
        android:title="@string/library"
        android:id="@+id/nav_library"
        android:icon="@drawable/baseline_library_music_24"
        >
    </item>
    <item
        android:tooltipText="Cá nhân"
        android:title="@string/c_nh_n"
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        >
    </item>
</menu>