<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForGotPassword.ChangePassword"
    android:padding="24dp"
    android:background="@color/bg_primary"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/reset_password_amico"
            android:importantForAccessibility="no"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/enter_your_new_password"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/icon_primary"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                style="@style/main_input_style"
                android:backgroundTint="@color/input_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:text=""
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                style="@style/main_input_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                app:endIconMode="password_toggle"
                android:hint="@string/enter_your_confim_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/input_color"
                android:paddingStart="24dp"
                android:text=""
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_password"
            style="@style/btn_primary"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="Save"
            />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/icon_primary"
        android:text="Exit"/>
</LinearLayout>